<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="T_LoggedEvents" Id="{17fe86a4-70dc-4beb-a0d3-12aa8018fd79}">
    <Declaration><![CDATA[TYPE T_LoggedEvents : 
	ARRAY[0..Param_EventLoggerListener.cMaxConcurrentEvents - 1] OF ST_LoggedEvent; 
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>