<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_LoggedEventsSortDescending" Id="{52712f22-095f-4017-8c07-06b74336489a}" SpecialFunc="None">
    <Declaration><![CDATA[{attribute 'no_explicit_call' := 'do not call this POU directly'}
FUNCTION_BLOCK FINAL FB_LoggedEventsSortDescending IMPLEMENTS I_LoggedEventsSort
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="GetLastIndex" Id="{49c1ac21-d879-4770-9208-e6856db53834}">
      <Declaration><![CDATA[METHOD PRIVATE GetLastIndex : UDINT
VAR_IN_OUT
	aLoggedEvents	: T_LoggedEvents;
END_VAR

VAR
	i 				: UDINT;
	nLastIndex		: UDINT;
	stLoggedEvent 	: ST_LoggedEvent;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[FOR i := 0 TO Param_EventLoggerListener.cMaxConcurrentEvents - 1 BY 1 DO
	IF aLoggedEvents[i].nUniqueId > 0 OR_ELSE aLoggedEvents[i].nSourceId > 0 THEN
		GetLastIndex := i;
	ELSE
		EXIT;
	END_IF
END_FOR; ]]></ST>
      </Implementation>
    </Method>
    <Method Name="Sort" Id="{17a4d191-9b1c-4d74-8fbe-b1139cff1151}">
      <Declaration><![CDATA[METHOD Sort : HRESULT
VAR_IN_OUT
	aLoggedEvents	: T_LoggedEvents;
END_VAR

VAR
	i 				: UDINT;
	nLastIndex		: UDINT;
	stTmpEvent 		: ST_LoggedEvent;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[nLastIndex := GetLastIndex(aLoggedEvents);
IF nLastIndex = 0 THEN
	Sort := S_FALSE;
	RETURN;
END_IF

FOR i := nLastIndex TO (nLastIndex / 2) + 1 BY -1 DO
	MEMMOVE(destAddr:= ADR(stTmpEvent), srcAddr:= ADR(aLoggedEvents[i]), n:= SIZEOF(stTmpEvent)); 
	MEMMOVE(destAddr:= ADR(aLoggedEvents[i]), srcAddr:= ADR(aLoggedEvents[nLastIndex - i]), n:= SIZEOF(aLoggedEvents[i])); 
	MEMMOVE(destAddr:= ADR(aLoggedEvents[nLastIndex - i]), srcAddr:= ADR(stTmpEvent), n:= SIZEOF(stTmpEvent)); 
END_FOR

Sort := S_OK;

]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_LoggedEventsSortDescending">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_LoggedEventsSortDescending.GetLastIndex">
      <LineId Id="14" Count="2" />
      <LineId Id="18" Count="1" />
      <LineId Id="17" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_LoggedEventsSortDescending.Sort">
      <LineId Id="66" Count="7" />
      <LineId Id="80" Count="1" />
      <LineId Id="76" Count="3" />
      <LineId Id="31" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>